GsAppTile: Memory leak due to finalize not being chained up
The finalize
function of GsAppTile
is not chained up to its parent class resulting in leaks of GtkButton
allocated memory:
==76781== 1,152 (288 direct, 864 indirect) bytes in 9 blocks are definitely lost in loss record 21,645 of 23,087
==76781== at 0x4945A1D: g_type_create_instance (gtype.c:1845)
==76781== by 0x492493E: g_object_new_internal (gobject.c:1937)
==76781== by 0x4926848: g_object_new_valist (gobject.c:2262)
==76781== by 0x4926B78: g_object_new (gobject.c:1780)
==76781== by 0x4D87AD1: gtk_css_custom_gadget_new_for_node (gtkcsscustomgadget.c:227)
==76781== by 0x4D3AAD0: gtk_button_init (gtkbutton.c:747)
==76781== by 0x4945AEF: g_type_create_instance (gtype.c:1861)
==76781== by 0x492493E: g_object_new_internal (gobject.c:1937)
==76781== by 0x49261DC: g_object_new_with_properties (gobject.c:2105)
==76781== by 0x4926B88: g_object_new (gobject.c:1777)
==76781== by 0x15EB8E: gs_popular_tile_new (in /usr/bin/gnome-software)
==76781== by 0x15C35E: ??? (in /usr/bin/gnome-software)