app tile: Chain up finalize to parent implementation

This fixes a small memory leak caused by the gtk button finalize code
never being run for GsPopularTiles.

Fixes https://gitlab.gnome.org/GNOME/gnome-software/issues/903